<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_childname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_childname" />

    <EditText
        android:id="@+id/tb_childname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/tv_childsurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_childsurname" />

    <EditText
        android:id="@+id/tb_childsurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/tv_regnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_regnum" />

    <EditText
        android:id="@+id/tb_regnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
         />

    <TextView
        android:id="@+id/tv_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_birthdate" />

    <DatePicker android:id="@+id/dp_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView android:id="@+id/tv_insurcompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tv_insurcompany" />

    <EditText android:id="@+id/tb_insurcompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number"/>

    <Button android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/b_savetext"/>

</LinearLayout>