<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/img_childphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/sym_def_app_icon" />



    <TextView
        android:id="@+id/tv_groupname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_groupname" />

    <EditText
        android:id="@+id/tb_groupname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/btn_loadphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/b_loadphototext" />
    <Button
        android:id="@+id/btn_savefinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/b_savetext" />





</LinearLayout>